attempting to solve white bar bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ html {
 body {
   background-repeat: no-repeat;
   background-attachment: fixed !important;
+  background-size: cover !important;
   background: -webkit-linear-gradient(top, rgb(50 29 120) 30%, rgb(70 21 107) 60%, rgb(20 35 66));
   
   text-align: center;
